config/participants/bankone/contrib-firebase-simulator.yaml
# TODO: templatize this chart!
# for now, this is deployable as bankone only
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contrib-firebase-simulator
  labels:
    app: contrib-firebase-simulator
    app.kubernetes.io/name: contrib-firebase-simulator
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 # exeed the replicas by 1 pod
  selector:
    matchLabels:
      app: contrib-firebase-simulator
  template:
    metadata:
      labels:
        app: contrib-firebase-simulator
    spec:
      volumes:
        - name: contrib-firebase-simulator-volume
          secret:
            secretName: contrib-firebase-simulator
      containers:
        - name: contrib-firebase-simulator
          image: mojaloop/contrib-firebase-simulator:v0.2.3
          # command: ["tail", "-f", "/dev/null"]
          livenessProbe:
            initialDelaySeconds: 10
            periodSeconds: 30
            httpGet:
              path: /app/health
              port: 8080
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 30
            httpGet:
              path: /app/health
              port: 8080
          volumeMounts:
            - name: contrib-firebase-simulator-volume
              mountPath: "/opt/contrib-firebase-simulator/config/serviceAccountKey.json"
              subPath: serviceAccountKey.json

---
apiVersion: v1
kind: Service
metadata:
  name: contrib-firebase-simulator
spec:
  ports:
    # TODO:
    - port: 8080
      name: ui
  selector:
    app: contrib-firebase-simulator
  clusterIP: None
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: contrib-firebase-simulator-ingress-svc
  annotations:
    kubernetes.io/ingress.class: kong
    # This is required to rewrite paths to services that contain multiple endpoints, 
    # e.g. /participants and /parties are both on the account-lookup-service
    konghq.com/plugins: fspiop-rewrite

spec:
  rules:
    - http:
        paths:
          - path: /bankone/app/(.*)
            backend:
              serviceName: contrib-firebase-simulator
              servicePort: 8080
