config/participants/bankone/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-bankone-ui
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - http:
        paths:
          - path: /bankone
            backend:
              serviceName: bankone-contrib-firebase-simulator
              servicePort: 8080
          - path: /bankone(/.*)
            backend:
              serviceName: bankone-contrib-firebase-simulator
              servicePort: 8080

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-bankone-svc
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: default-rewrite

spec:
  rules:
    - http:
        paths:
          - path: /bankone/(app.*)
            backend:
              serviceName: bankone-contrib-firebase-simulator
              servicePort: 8080
            # backend:
            #   serviceName: echo
            #   servicePort: 80
